package edu.fiuba.algo3.modelo;

import java.util.List;

public class DiscardPile extends CardCollection {

    @Override
    public void addCard(Card card) {
        if (card instanceof Unit) {
            ((Unit) card).resetPoints();
        }
        super.addCard(card);
    }

    @Override
    public void insertCards(List<Card> cards) {
        for (Card c : cards) {
            addCard(c);
        }

    }

    public Card getLastCard() {
        if (cards.isEmpty()) {
            throw new IllegalStateException("Cannot get last card from empty discard pile");
        }
        int lastCard = (cards.size() - 1);
        return cards.remove(lastCard);
    }

    public Card getLastUnitCardFromType(Row row){
        for (int i = cards.size() - 1; i >= 0; i--) {
            Card card = cards.get(i);
            if (card instanceof Unit && row.haveSameSectionType(card)) {
                cards.remove(i);
                return card;
            }
        }
       throw new NotUnitCardError("No unit card found in discard pile");
    }

    /*
    public Card getLastUnitCardFromType(Row row){
        for (int i = cards.size() - 1; i >= 0; i--) {
            Card card = cards.get(i);
            try {
                if (card instanceof Unit ) {
                    row.haveSameSectionType(card);
                    cards.remove(i);
                    return card;
                }
            }catch (SectionTypeMismatchError ignored){
            }

        }
        throw new NotUnitCardError("No unit card found in discard pile");
    }

     */
}
